Bug 780842 - Check for normalized type id in annotateGetPropertyCache. (r=jandem)