js/src/ion/IonBuilder.cpp
@@ -5517,6 +5517,8 @@ IonBuilder::annotateGetPropertyCache(JSContext *cx, MDefinition *obj, MGetProper
                                     types::TypeSet *objTypes, types::TypeSet *pushedTypes)
 {
     RootedId id(cx, NameToId(getPropCache->name()));
+    if ((jsid)id != types::MakeTypeId(cx, id))
+        return true;
 
     // Ensure every pushed value is a singleton.
     if (pushedTypes->unknownObject() || pushedTypes->baseFlags() != 0)
